# mini_dbaas_portal

./: .gitignore  PROJECT_STRUCTURE.md  README.md
backend/: .env.example  .gitignore  Cargo.toml  package.json
backend/src/: index.ts  main.rs  schema.sql
backend/src/db/: index.ts  migrate.ts
backend/src/middleware/: auth.ts
backend/src/routes/: auth.ts  user.ts
backend/src/state/: mod.rs
backend/src/utils/: jwt.rs  password.rs
docs/: SPRINT_1_SETUP_COMPLETE.md  project_specification.md
docs/activity/: index.md  index.puml
docs/erd/: index.md  index.puml
docs/sequence_diagram/: index.md  index.puml
docs/system_architecture/: index.md  index.puml  system_architecture.md
docs/task/: sprint1.md  sprint2.md  sprint3.md  sprint4.md  sprint5.md
docs/use_case/: index.md  index.puml
frontend/: .env.example  ROLE_PERMISSIONS.md  package.json
frontend/src/app/: layout.tsx
frontend/src/app/(admin)/: layout.tsx  page.tsx
frontend/src/components/auth/: ProtectedRoute.tsx  SignInForm.tsx  SignUpForm.tsx  WithRole.tsx
frontend/src/components/db-explorer/: DatabaseTree.tsx
frontend/src/components/query-editor/: QueryEditor.tsx  QueryResult.tsx
frontend/src/components/ui/: Card.tsx
frontend/src/components/user-profile/: ChangePasswordCard.tsx  UserInfoCard.tsx  UserMetaCard.tsx  UserPreferencesCard.tsx
frontend/src/layout/: AppSidebar.tsx
frontend/src/lib/api/: adminService.ts  auditLogService.ts  authService.ts  axios.ts  dbService.ts  invitationService.ts  metricsService.ts  userService.ts
frontend/src/lib/store/: authStore.ts  (+1 more)
(+18 files in other folders)
